# doom-clone

./: Cargo.toml
.cargo/: config.toml
src/: drawing_utils.rs  entity.rs  game.rs  main.rs  player.rs  utils.rs  world.rs
src/utils/: collision.rs
