[package]
name = "doom-clone"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { version = "0.8.1"}
tokio = { version = "1.21.1", features = ["full"] }
color-eyre = "0.6.2"
rayon = "1.5.3"
tracing = "0.1.36"

[workspace]
resolver = "2"
debug = true

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1


# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3